--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head>
     <style>
       .block2 {
-        background: yellow;
+        background: orange;
         padding: 20px;
       }
     </style>
