html for select element

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,13 @@
     
       <h1>Happy cat</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSd2gNr9NknRPDXClWyj0o2EI3nMXkxywESbw&s" alt="">
+    <div>
+      <select name="" id="">
+        <option value="1">Apple</option>
+        <option selected="selected" value="2">Orange</option>
+        <option disabled value="3">Banan</option>
+      </select>
+    </div>
 
     <div class="block1">
       <h2>Test1</h2>
