Training link, table, and iframe HTML tags

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
     </style>
   </head>
   <body>
+
+    <a href="/src/index2.html" title="This is link to index2` page"> index2 page</a>
+
     <ul>
       <li>
         test123
